--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build"
   },
   "main": "./dist/prometheus-sdk.cjs.js",
-  "module": "./dist/prometheus-sdk.es.js", 
+  "module": "./dist/prometheus-sdk.es.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -31,8 +31,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^24.0.14",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4"
+  },
+  "dependencies": {
+    "@dfinity/agent": "^2.4.1",
+    "@dfinity/identity": "^2.4.1",
+    "@dfinity/identity-secp256k1": "^2.4.1",
+    "@dfinity/principal": "^2.4.1",
+    "dotenv": "^17.2.0",
+    "pem-file": "^1.0.1"
   }
 }
