--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@prometheus-protocol/typescript-sdk",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "description": "SDK for interacting with the Prometheus Protocol",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "main": "./dist/prometheus-sdk.cjs.js",
   "module": "./dist/prometheus-sdk.es.js",
@@ -22,7 +23,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "keywords": [
     "icp",
@@ -35,10 +37,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^24.0.14",
+    "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
-    "vite-plugin-dts": "^4.5.4"
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@dfinity/agent": "^2.4.1",
