refactor: move transfer logic from auth canister to the sdk

--- a/examples/express-api/backend/.env.sample
+++ b/examples/express-api/backend/.env.sample
@@ -1,4 +1,5 @@
 AUTH_CANISTER_ID="your-auth-canister-id"
 PEM_FILE_PATH="server-identity.pem"
-USER_TO_CHARGE_PRINCIPAL="principal-of-user-with-allowance"
-CHARGE_AMOUNT=10000
+PORT=8079
+RESOURCE_SERVER_URL="http://localhost:8079"
+PAYOUT_PRINCIPAL="hj4h3-qygbd-j3eon-jre7t-zkaqa-wahfg-3lipo-c6df7-gw7wn-zwzwe-5ae"
