--- a/examples/sentiment-analyzer/package.json
+++ b/examples/sentiment-analyzer/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "mcp-server",
+  "name": "sentiment-analyzer",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@modelcontextprotocol/sdk": "^1.16.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.15",
+    "@types/sentiment": "^5.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@dfinity/principal": "^2.4.1",
+    "@modelcontextprotocol/sdk": "^1.16.0",
+    "@prometheus-protocol/typescript-sdk": "^0.1.5",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "morgan": "^1.10.1",
+    "sentiment": "^5.0.2",
     "zod": "^3.25.76"
   }
 }
