--- a/examples/mcp-sentiment-analyzer/package.json
+++ b/examples/mcp-sentiment-analyzer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sentiment-analyzer",
+  "name": "mcp-sentiment-analyzer",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
