feat: setup sementic release

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "author": "alice",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.14",
     "@types/prompts": "^2.4.9",
@@ -49,6 +51,7 @@
     "dotenv": "^17.2.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
+    "semantic-release": "^24.2.7",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vite-plugin-banner": "^0.8.1",
@@ -62,6 +65,8 @@
     "@dfinity/ledger-icrc": "^2.9.1",
     "@dfinity/principal": "^2.4.1",
     "axios": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.1",
     "pem-file": "^1.0.1",
     "pkce-challenge": "^5.0.0",
