--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,12 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write # to push new commits and tags
+      issues: write # to comment on released issues
+      pull-requests: write # to comment on released pull requests
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
