--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "semantic-release": "^24.2.7",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
-    "vite-plugin-banner": "^0.8.1",
     "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
