--- a/examples/express-api/backend/package.json
+++ b/examples/express-api/backend/package.json
@@ -14,12 +14,15 @@
   "description": "",
   "dependencies": {
     "@dfinity/principal": "^2.4.1",
-    "@prometheus-protocol/typescript-sdk": "file:../../..",
+    "@modelcontextprotocol/sdk": "^1.16.0",
+    "@prometheus-protocol/typescript-sdk": "^1.0.3",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "express-jwt": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
-    "pem-file": "^1.0.1"
+    "pem-file": "^1.0.1",
+    "zod": "^3.25.76"
   }
 }
