--- a/examples/express-api/backend/package.json
+++ b/examples/express-api/backend/package.json
@@ -2,16 +2,20 @@
   "name": "express-example",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development node src/server.js"
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  },
   "dependencies": {
     "@dfinity/principal": "^2.4.1",
     "@modelcontextprotocol/sdk": "^1.16.0",
