--- a/examples/mcp-pmp-faucet/package.json
+++ b/examples/mcp-pmp-faucet/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcp-sentiment-analyzer",
+  "name": "mcp-pmp-faucet",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   "dependencies": {
     "@dfinity/principal": "^2.4.1",
     "@modelcontextprotocol/sdk": "^1.16.0",
-    "@prometheus-protocol/typescript-sdk": "^1.2.0",
+    "@prometheus-protocol/typescript-sdk": "^1.2.1",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
