--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@dfinity/identity-secp256k1": "^2.4.1",
     "@dfinity/ledger-icrc": "^2.9.1",
     "@dfinity/principal": "^2.4.1",
+    "@modelcontextprotocol/sdk": "^1.17.0",
     "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
